--- a/Back-end/ms_teacher/src/main/resources/application.yml
+++ b/Back-end/ms_teacher/src/main/resources/application.yml
@@ -1,6 +1,20 @@
+
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/db_guru
     username: postgres
     password: Cola132305
+
+  application:
+    name: ms_teacher
+
+server:
+  port: 0
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
