--- a/Back-end/ms_teacher/Dockerfile
+++ b/Back-end/ms_teacher/Dockerfile
@@ -6,5 +6,5 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17
 WORKDIR /app
 COPY --from=build ./app/target/*.jar ./app.jar
-EXPOSE 8761
+ARG EUREKA_SERVER=eureka
 ENTRYPOINT java -jar app.jar
