--- a/Back-end/ms_teacher/src/main/resources/application.yml
+++ b/Back-end/ms_teacher/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/professor_db
+    url: jdbc:postgresql://some-postgres:5432/professor_db
     username: postgres
-    password: Cola132305
+    password: 123456
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -25,6 +25,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
