--- a/Back-end/ms_address/src/main/resources/application.yml
+++ b/Back-end/ms_address/src/main/resources/application.yml
@@ -1,22 +1,22 @@
 
 spring:
   application:
-    name: msteacher
+    name: msaddress
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgres-teacher-db:5432/teacher_db
+    url: jdbc:postgresql://postgres-address-db:5432/address_db
     username: postgres
     password: zxcvbnm123
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-        ddl-auto: update
+      ddl-auto: update
     properties:
-        hibernate:
-          format_sql: true
-          show_sql: true
+      hibernate:
+        format_sql: true
+        show_sql: true
 
 server:
   port: 0
