--- a/Back-end/ms_teacher/src/main/resources/application-local.yml
+++ b/Back-end/ms_teacher/src/main/resources/application-local.yml
@@ -2,14 +2,12 @@
 spring:
   application:
     name: msteacher
-  profiles:
-    active: local #configuração local. Para rodar no docker é necessario retirar essa config
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgres-teacher-db:5432/teacher_db
+    url: jdbc:postgresql://localhost:5432/teacher_db
     username: postgres
-    password: zxcvbnm123
+    password: Cola132305
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -26,6 +24,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka:8761/eureka
+      defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
