--- a/Back-end/ms_teacher/pom.xml
+++ b/Back-end/ms_teacher/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
