relacionamento foto/user

--- a/Back-end/ms_user/src/main/resources/application-local.yml
+++ b/Back-end/ms_user/src/main/resources/application-local.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: msuser
@@ -8,6 +7,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/user_db
     username: postgres
     password: Cola132305
+
+  #Definindo tamanho maximo de arquivo recebido
+  #servlet:
+   # multipart:
+    #  max-file-size: 500KB
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -27,3 +31,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+
