--- a/Back-end/gateway/src/main/resources/application-local.yml
+++ b/Back-end/gateway/src/main/resources/application-local.yml
@@ -18,7 +18,7 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:8761/eureka
 
 
 
