--- a/Back-end/ms_practicalClasses/pom.xml
+++ b/Back-end/ms_practicalClasses/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>https.github.com.alecxandy.AutoGestor.git</groupId>
-	<artifactId>ms_classroom</artifactId>
+	<groupId>https.github.com.alecxandy.AutoGestor</groupId>
+	<artifactId>ms_practicalClasses</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ms_classroom</name>
-	<description>Classroom</description>
+	<name>ms_practicalClasses</name>
+	<description>Practical Classes</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
