--- a/Back-end/ms_practicalClasses/pom.xml
+++ b/Back-end/ms_practicalClasses/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.5</version>
+		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>https.github.com.alecxandy.AutoGestor</groupId>
@@ -15,6 +15,7 @@
 	<description>Practical Classes</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
